Ubah docs dikit

--- a/public/css/docs.css
+++ b/public/css/docs.css
@@ -64,6 +64,8 @@ body.dark .activity-data::-webkit-scrollbar-thumb:hover {
 }
 
 nav {
+  overflow-y: scroll;
+  overflow-x: hidden;
   position: fixed;
   top: 0;
   left: 0;
