--- a/views/docs.html
+++ b/views/docs.html
@@ -49,9 +49,9 @@
               </a>
             </li>
             <li>
-              <a href="#nsfw">
+              <a href="#nsfw/">
                 <i class="uil uil-18-plus"></i>
-                <span class="link-name">Nsfw</span>
+                <span class="link-name">Nsfw/</span>
               </a>
             </li>
             <li>
@@ -78,8 +78,19 @@
                 <span class="link-name">Random Video</span>
               </a>
             </li>
+            <li>
+              <a href="#tools">
+                <i class="uil uil-crockery"></i>
+                <span class="link-name">Tools</span>
+              </a>
+            </li>
+            <li>
+              <a href="#game">
+                <i class="uil uil-game-structure"></i>
+                <span class="link-name">Game</span>
+              </a>
+            </li>
           </ul>
-
           <ul class="logout-mode">
             <li>
               <a href="#">
@@ -499,10 +510,10 @@
               </div>
             </div>
           </div>
-          <div class="activity" id="nsfw">
+          <div class="activity" id="nsfw/">
             <div class="title">
               <i class="uil uil-18-plus"></i>
-              <span class="text">Nsfw</span>
+              <span class="text">Nsfw/</span>
             </div>
 
             <div class="activity-data">
@@ -1439,26 +1450,98 @@
             <div class="activity-data">
               <div class="data names">
                 <span class="data-title">Name</span>
-                <span class="data-list">Prem Shahi</span>
-                <span class="data-list">Deepa Chand</span>
-                <span class="data-list">Manisha Chand</span>
-                <span class="data-list">Pratima Shahi</span>
-                <span class="data-list">Man Shahi</span>
-                <span class="data-list">Ganesh Chand</span>
-                <span class="data-list">Bikash Chand</span>
+                <span class="data-list">Waifu</span>
+                <span class="data-list">Neko</span>
+                <span class="data-list">Shinobu</span>
+                <span class="data-list">Megumin</span>
+                <span class="data-list">Bully</span>
+                <span class="data-list">Cuddle</span>
+                <span class="data-list">Cry</span>
+                <span class="data-list">Hug</span>
+                <span class="data-list">Awoo</span>
+                <span class="data-list">Kiss</span>
+                <span class="data-list">Lick</span>
+                <span class="data-list">Pat</span>
+                <span class="data-list">Smug</span>
+                <span class="data-list">Bonk</span>
+                <span class="data-list">Yeet</span>
+                <span class="data-list">Blush</span>
+                <span class="data-list">Smile</span>
+                <span class="data-list">Wave</span>
+                <span class="data-list">Highfive</span>
+                <span class="data-list">Handhold</span>
+                <span class="data-list">Nom</span>
+                <span class="data-list">Bite</span>
+                <span class="data-list">Glomp</span>
+                <span class="data-list">Slap</span>
+                <span class="data-list">Kill</span>
+                <span class="data-list">Kick</span>
+                <span class="data-list">Happy</span>
+                <span class="data-list">Wink</span>
+                <span class="data-list">Poke</span>
+                <span class="data-list">Dance</span>
+                <span class="data-list">Cringe</span>
               </div>
               <div class="data path">
                 <span class="data-title">Path</span>
-                <span class="data-list">premshahi@gmail.com</span>
-                <span class="data-list">deepachand@gmail.com</span>
-                <span class="data-list">prakashhai@gmail.com</span>
-                <span class="data-list">manishachand@gmail.com</span>
-                <span class="data-list">pratimashhai@gmail.com</span>
-                <span class="data-list">manshahi@gmail.com</span>
-                <span class="data-list">ganeshchand@gmail.com</span>
+                <span class="data-list">api/image/sfw/waifu</span>
+                <span class="data-list">api/image/sfw//neko</span>
+                <span class="data-list">api/image/sfw/shinobu</span>
+                <span class="data-list">api/image/sfw/megumin</span>
+                <span class="data-list">api/image/sfw/bully</span>
+                <span class="data-list">api/image/sfw/cuddle</span>
+                <span class="data-list">api/image/sfw/cry</span>
+                <span class="data-list">api/image/sfw/hug</span>
+                <span class="data-list">api/image/sfw/awoo</span>
+                <span class="data-list">api/image/sfw/kiss</span>
+                <span class="data-list">api/image/sfw/lick</span>
+                <span class="data-list">api/image/sfw/pat</span>
+                <span class="data-list">api/image/sfw/smug</span>
+                <span class="data-list">api/image/sfw/bonk</span>
+                <span class="data-list">api/image/sfw/yeet</span>
+                <span class="data-list">api/image/sfw/blush</span>
+                <span class="data-list">api/image/sfw/smile</span>
+                <span class="data-list">api/image/sfw/wave</span>
+                <span class="data-list">api/image/sfw/highfive</span>
+                <span class="data-list">api/image/sfw/handhold</span>
+                <span class="data-list">api/image/sfw/nom</span>
+                <span class="data-list">api/image/sfw/bite</span>
+                <span class="data-list">api/image/sfw/glomp</span>
+                <span class="data-list">api/image/sfw/slap</span>
+                <span class="data-list">api/image/sfw/kill</span>
+                <span class="data-list">api/image/sfw/kick</span>
+                <span class="data-list">api/image/sfw/happy</span>
+                <span class="data-list">api/image/sfw/wink</span>
+                <span class="data-list">api/image/sfw/poke</span>
+                <span class="data-list">api/image/sfw/dance</span>
+                <span class="data-list">api/image/sfw/cringe</span>
               </div>
               <div class="data Added">
                 <span class="data-title">Added</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -1470,29 +1553,188 @@
               <div class="data action">
                 <span class="data-title">Action</span>
                 <span class="data-list"
-                  ><a href=""><i class="uil uil-play"></i> Go to </a></span
+                  ><a href="api/image/sfw/waifu"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
                 >
                 <span class="data-list"
-                  ><a href=""><i class="uil uil-play"></i> Go to </a></span
+                  ><a href="api/image/sfw/neko"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
                 >
                 <span class="data-list"
-                  ><a href=""><i class="uil uil-play"></i> Go to </a></span
+                  ><a href="api/image/sfw/shinobu"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+
+                <span class="data-list"
+                  ><a href="api/image/sfw/megumin"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
                 >
                 <span class="data-list"
-                  ><a href=""><i class="uil uil-play"></i> Go to </a></span
+                  ><a href="api/image/sfw/bully"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
                 >
                 <span class="data-list"
-                  ><a href=""><i class="uil uil-play"></i> Go to </a></span
+                  ><a href="api/image/sfw/cuddle"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
                 >
                 <span class="data-list"
-                  ><a href=""><i class="uil uil-play"></i> Go to </a></span
+                  ><a href="api/image/sfw/cry"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
                 >
                 <span class="data-list"
-                  ><a href=""><i class="uil uil-play"></i> Go to </a></span
+                  ><a href="api/image/sfw/hug"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/awoo"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/kiss"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/lick"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/pat"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/smug"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/bonk"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/yeet"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/blush"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/smile"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/wave"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/highfive"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/handhold"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/nom"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/bite"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/glomp"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/slap"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/kill"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/kick"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/happy"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/wink"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/poke"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/dance"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/image/sfw/cringe"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
                 >
               </div>
               <div class="data status">
                 <span class="data-title">Status</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
