--- a/views/docs.html
+++ b/views/docs.html
@@ -1224,7 +1224,7 @@
                 <span class="data-list">api/textpro/embossed</span>
               </div>
               <div class="data Added">
-                <span class="data-title">Added</span>
+                <span class="data-title">Method</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -1849,7 +1849,7 @@
                 <span class="data-list">api/image/sfw/cringe</span>
               </div>
               <div class="data Added">
-                <span class="data-title">Added</span>
+                <span class="data-title">Method</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -2105,7 +2105,7 @@
                 <span class="data-list">ganeshchand@gmail.com</span>
               </div>
               <div class="data Added">
-                <span class="data-title">Added</span>
+                <span class="data-title">Method</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
