--- a/views/landing.html
+++ b/views/landing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/AVM-Logo.png" type="image" />
     <title>Avm Api</title>
-    <link rel="stylesheet" href="css/landing.css" />
+    <link rel="stylesheet" href="../css/landing.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="js/parallax.js"></script>
