--- a/views/docs.html
+++ b/views/docs.html
@@ -315,6 +315,11 @@
                 <span class="data-list">Playstore</span>
                 <span class="data-list">Cuaca</span>
                 <span class="data-list">Covid</span>
+                <span class="data-list">komiku</span>
+                <span class="data-list">doujindesu</span>
+                <span class="data-list">kuyhaa</span>
+                <span class="data-list">adikfilm</span>
+                <span class="data-list">character</span>
               </div>
               <div class="data path">
                 <span class="data-title">Path</span>
@@ -338,9 +343,19 @@
                 <span class="data-list">api/information/playstore</span>
                 <span class="data-list">api/information/cuaca</span>
                 <span class="data-list">api/information/covid</span>
+                <span class="data-list">api/information/komiku</span>
+                <span class="data-list">api/information/doujindesu</span>
+                <span class="data-list">api/information/kuyhaa</span>
+                <span class="data-list">api/information/adikfilm</span>
+                <span class="data-list">api/information/character</span>
               </div>
               <div class="data Added">
                 <span class="data-title">Method</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -465,9 +480,39 @@
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
+                <span class="data-list"
+                  ><a href="api/information/komiku?q=one piece"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/information/doujindesu?q=kanojo"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/information/kuyhaa?q=jet brains"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/information/adikfilm?q=harry"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/information/character?q=yuigahama yui"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
               </div>
               <div class="data status">
                 <span class="data-title">Status</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
