--- a/views/docs.html
+++ b/views/docs.html
@@ -141,13 +141,13 @@
               </div>
               <div class="box box2">
                 <i class="uil uil-comments"></i>
-                <span class="text">Comments</span>
-                <span class="number">20,120</span>
+                <span class="text">Emm</span>
+                <span class="number">;-;</span>
               </div>
               <div class="box box3">
                 <i class="uil uil-share"></i>
-                <span class="text">Total Share</span>
-                <span class="number">10,120</span>
+                <span class="text">Progress</span>
+                <span class="number">50%</span>
               </div>
             </div>
           </div>
