--- a/views/docs.html
+++ b/views/docs.html
@@ -140,12 +140,12 @@
                 <span class="number" id="visitor">Loading....</span>
               </div>
               <div class="box box2">
-                <i class="uil uil-comments"></i>
+                <i class="uil uil-meh"></i>
                 <span class="text">Emm</span>
                 <span class="number">;-;</span>
               </div>
               <div class="box box3">
-                <i class="uil uil-share"></i>
+                <i class="uil uil-server"></i>
                 <span class="text">Progress</span>
                 <span class="number">50%</span>
               </div>
