--- a/views/landing.html
+++ b/views/landing.html
@@ -22,7 +22,7 @@
         <h1 class="logo">
           <a href=""><span class="A">A</span> v<span class="M">m</span></a>
         </h1>
-        <a href="" class="btn-source">Source code</a>
+        <a href="https://github.com/AndikaVikarMuhamad/Avm" class="btn-source">Source code</a>
       </nav>
       <div class="header-title">
         <a href="/docs" class="Docs kaca"
