--- a/views/docs.html
+++ b/views/docs.html
@@ -252,7 +252,7 @@
 
                 <span class="data-list"
                   ><a
-                    href="api/download/fb??url=https://www.facebook.com/Animeisekai01/photos/a.586598968533592/1368611010332380/"
+                    href="api/download/fb?url=https://www.facebook.com/Animeisekai01/photos/a.586598968533592/1368611010332380/"
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
