--- a/views/docs.html
+++ b/views/docs.html
@@ -48,9 +48,9 @@
               </a>
             </li>
             <li>
-              <a href="#nsfw/">
+              <a href="#nsfw">
                 <i class="uil uil-18-plus"></i>
-                <span class="link-name">Nsfw/</span>
+                <span class="link-name">Nsfw</span>
               </a>
             </li>
             <li>
@@ -167,9 +167,10 @@
                 <span class="data-list">Play</span>
                 <span class="data-list">Play mp4</span>
                 <span class="data-list">Tiktok</span>
+                <span class="data-list">Tiktokv2</span>
                 <span class="data-list">Facebook</span>
                 <span class="data-list">instagram</span>
-                <span class="data-list">instagram v2</span>
+                <!-- <span class="data-list">instagram v2</span> -->
                 <span class="data-list">savefrom</span>
                 <span class="data-list">mediafire</span>
                 <span class="data-list">sfilemobi search</span>
@@ -185,9 +186,10 @@
                 <span class="data-list">api/download/play</span>
                 <span class="data-list">api/download/playmp4</span>
                 <span class="data-list">api/download/tiktok</span>
+                <span class="data-list">api/download/tiktokv2</span>
                 <span class="data-list">api/download/fb</span>
                 <span class="data-list">api/download/ig</span>
-                <span class="data-list">api/download/ig2</span>
+                <!-- <span class="data-list">api/download/ig2</span> -->
                 <span class="data-list">api/download/savefrom</span>
                 <span class="data-list">api/download/mediafire</span>
                 <span class="data-list">api/download/sfilemobi</span>
@@ -209,6 +211,7 @@
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
+                <!-- <span class="data-list">Get</span> -->
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -249,6 +252,12 @@
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
+                <span class="data-list"
+                  ><a
+                    href="api/download/tiktokv2?url=https://vm.tiktok.com/ZSJcLPNpe"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
 
                 <span class="data-list"
                   ><a
@@ -262,12 +271,12 @@
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
-                <span class="data-list"
+                <!-- <span class="data-list"
                   ><a
                     href="api/download/ig2?url=https://www.instagram.com/reel/Cg4Ik0fjbac/?utm_source=ig_web_copy_link"
                     ><i class="uil uil-play"></i> Go to
                   </a></span
-                >
+                > -->
 
                 <span class="data-list"
                   ><a
@@ -315,6 +324,7 @@
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
+                <!-- <span class="data-list">Online</span> -->
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
@@ -583,10 +593,10 @@
               </div>
             </div>
           </div>
-          <div class="activity" id="nsfw/">
+          <div class="activity" id="nsfw">
             <div class="title">
               <i class="uil uil-18-plus"></i>
-              <span class="text">Nsfw/</span>
+              <span class="text">Nsfw</span>
             </div>
 
             <div class="activity-data">
@@ -617,10 +627,10 @@
                 <span class="data-list">api/h/girlfrontline</span>
                 <span class="data-list">api/h/kancolle</span>
                 <span class="data-list">api/h/rule34</span>
-                <span class="data-list">api/h/waifu</span>
-                <span class="data-list">api/h/neko</span>
-                <span class="data-list">api/h/trap</span>
-                <span class="data-list">api/h/blowjob</span>
+                <span class="data-list">api/he/waifu</span>
+                <span class="data-list">api/he/neko</span>
+                <span class="data-list">api/he/trap</span>
+                <span class="data-list">api/he/blowjob</span>
               </div>
               <div class="data Added">
                 <span class="data-title">Method</span>
@@ -686,22 +696,22 @@
                   </a></span
                 >
                 <span class="data-list"
-                  ><a href="api/h/waifu"
+                  ><a href="api/he/waifu"
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
                 <span class="data-list"
-                  ><a href="api/h/neko"
+                  ><a href="api/he/neko"
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
                 <span class="data-list"
-                  ><a href="api/h/trap"
+                  ><a href="api/he/trap"
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
                 <span class="data-list"
-                  ><a href="api/h/blowjob"
+                  ><a href="api/he/blowjob"
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
