--- a/views/docs.html
+++ b/views/docs.html
@@ -177,6 +177,7 @@
                 <span class="data-list">sfilemobidl</span>
                 <span class="data-list">stickerpack</span>
                 <span class="data-list">stickerpackdl</span>
+                <span class="data-list">nhentaidl</span>
               </div>
               <div class="data path">
                 <span class="data-title">Path</span>
@@ -196,6 +197,7 @@
                 <span class="data-list">api/download/sfilemobidl</span>
                 <span class="data-list">api/download/stickerpack</span>
                 <span class="data-list">api/download/stickerpackdl</span>
+                <span class="data-list">api/h/nhentai</span>
               </div>
               <div class="data Added">
                 <span class="data-title">Method</span>
@@ -212,6 +214,7 @@
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <!-- <span class="data-list">Get</span> -->
+                <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -312,6 +315,11 @@
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
+                <span class="data-list"
+                  ><a href="api/h/nhentai?code=117013"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
               </div>
               <div class="data status">
                 <span class="data-title">Status</span>
@@ -325,6 +333,7 @@
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <!-- <span class="data-list">Online</span> -->
+                <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
@@ -602,38 +611,40 @@
             <div class="activity-data">
               <div class="data names">
                 <span class="data-title">Name</span>
-                <span class="data-list">Hololive</span>
-                <span class="data-list">Fgo</span>
-                <span class="data-list">Genshin</span>
-                <span class="data-list">Azurlane</span>
-                <span class="data-list">Arknights</span>
-                <span class="data-list">Fireemblem</span>
-                <span class="data-list">Girlfrontline</span>
-                <span class="data-list">Kancolle</span>
-                <span class="data-list">Rule34</span>
                 <span class="data-list">Waifu</span>
                 <span class="data-list">Neko</span>
                 <span class="data-list">Trap</span>
                 <span class="data-list">Blowjob</span>
+                <span class="data-list">Armpit</span>
+                <span class="data-list">Milf</span>
+                <span class="data-list">Genshin</span>
+                <span class="data-list">Arknights</span>
+                <span class="data-list">Azur Lane</span>
+                <span class="data-list">Netorare</span>
+                <span class="data-list">Blue Archive</span>
+                <span class="data-list">Yuri</span>
+                <span class="data-list">Rule 34</span>
               </div>
               <div class="data path">
                 <span class="data-title">Path</span>
-                <span class="data-list">api/h/hololive</span>
-                <span class="data-list">api/h/fgo</span>
-                <span class="data-list">api/h/genshin</span>
-                <span class="data-list">api/h/azurlane</span>
-                <span class="data-list">api/h/arknights</span>
-                <span class="data-list">api/h/fireemblem</span>
-                <span class="data-list">api/h/girlfrontline</span>
-                <span class="data-list">api/h/kancolle</span>
-                <span class="data-list">api/h/rule34</span>
+
                 <span class="data-list">api/he/waifu</span>
                 <span class="data-list">api/he/neko</span>
                 <span class="data-list">api/he/trap</span>
                 <span class="data-list">api/he/blowjob</span>
+                <span class="data-list">api/h/img/armpit</span>
+                <span class="data-list">api/h/img/milf</span>
+                <span class="data-list">api/h/img/genshin</span>
+                <span class="data-list">api/h/img/arknights</span>
+                <span class="data-list">api/h/img/azur_lane</span>
+                <span class="data-list">api/h/img/netorare</span>
+                <span class="data-list">api/h/img/blue_archive</span>
+                <span class="data-list">api/h/img/yuri</span>
+                <span class="data-list">api/h/rule34</span>
               </div>
               <div class="data Added">
                 <span class="data-title">Method</span>
+
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -650,51 +661,6 @@
               </div>
               <div class="data action">
                 <span class="data-title">Action</span>
-                <span class="data-list"
-                  ><a href="api/h/hololive"
-                    ><i class="uil uil-play"></i> Go to
-                  </a></span
-                >
-                <span class="data-list"
-                  ><a href="api/h/fgo"
-                    ><i class="uil uil-play"></i> Go to
-                  </a></span
-                >
-                <span class="data-list"
-                  ><a href="api/h/genshin"
-                    ><i class="uil uil-play"></i> Go to
-                  </a></span
-                >
-                <span class="data-list"
-                  ><a href="api/h/azurlane"
-                    ><i class="uil uil-play"></i> Go to
-                  </a></span
-                >
-                <span class="data-list"
-                  ><a href="api/h/arknights"
-                    ><i class="uil uil-play"></i> Go to
-                  </a></span
-                >
-                <span class="data-list"
-                  ><a href="api/h/fireemblem"
-                    ><i class="uil uil-play"></i> Go to
-                  </a></span
-                >
-                <span class="data-list"
-                  ><a href="api/h/girlfrontline"
-                    ><i class="uil uil-play"></i> Go to
-                  </a></span
-                >
-                <span class="data-list"
-                  ><a href="api/h/kancolle"
-                    ><i class="uil uil-play"></i> Go to
-                  </a></span
-                >
-                <span class="data-list"
-                  ><a href="api/h/rule34?q=futa"
-                    ><i class="uil uil-play"></i> Go to
-                  </a></span
-                >
                 <span class="data-list"
                   ><a href="api/he/waifu"
                     ><i class="uil uil-play"></i> Go to
@@ -715,9 +681,55 @@
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
+                <span class="data-list"
+                  ><a href="api/h/img/armpit"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/h/img/milf"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/h/img/genshin"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/h/img/arknights"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/h/img/azur_lane"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/h/img/netorare"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/h/img/blue_archive"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/h/img/yuri"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a href="api/h/rule34?tags=furry"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
               </div>
               <div class="data status">
                 <span class="data-title">Status</span>
+
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
