--- a/views/docs.html
+++ b/views/docs.html
@@ -1932,6 +1932,7 @@
                 <span class="data-list">Stickertelegram</span>
                 <span class="data-list">Wallpaper</span>
                 <span class="data-list">Wallpaper v2</span>
+                <span class="data-list">konachan</span>
               </div>
               <div class="data path">
                 <span class="data-title">Path</span>
@@ -1966,15 +1967,17 @@
                 <span class="data-list">api/image/sfw/poke</span>
                 <span class="data-list">api/image/sfw/dance</span>
                 <span class="data-list">api/image/sfw/cringe</span>
-                <span class="data-list">api/image/sfw/gis</span>
-                <span class="data-list">api/image/sfw/artbreader</span>
-                <span class="data-list">api/image/sfw/pinterest</span>
-                <span class="data-list">api/image/sfw/stickertelegram</span>
-                <span class="data-list">api/image/sfw/wallpaper</span>
-                <span class="data-list">api/image/sfw/wallpaper2</span>
+                <span class="data-list">api/image/gis</span>
+                <span class="data-list">api/image/artbreader</span>
+                <span class="data-list">api/image/pinterest</span>
+                <span class="data-list">api/image/stickertelegram</span>
+                <span class="data-list">api/image/wallpaper</span>
+                <span class="data-list">api/image/wallpaper2</span>
+                <span class="data-list">api/image/konachan</span>
               </div>
               <div class="data Added">
                 <span class="data-title">Method</span>
+                <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -2201,9 +2204,15 @@
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
+                <span class="data-list"
+                  ><a href="api/image/konachan?tags=glasses"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
               </div>
               <div class="data status">
                 <span class="data-title">Status</span>
+                <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
