--- a/views/docs.html
+++ b/views/docs.html
@@ -136,8 +136,8 @@
             <div class="boxes">
               <div class="box box1">
                 <i class="uil uil-eye"></i>
-                <span class="text">Visited</span>
-                <span class="number" id="visitor">Loading....</span>
+                <span class="text">Ok</span>
+                <span class="number" id="visitor">'-'</span>
               </div>
               <div class="box box2">
                 <i class="uil uil-meh"></i>
