--- a/views/docs.html
+++ b/views/docs.html
@@ -178,6 +178,7 @@
                 <span class="data-list">stickerpack</span>
                 <span class="data-list">stickerpackdl</span>
                 <span class="data-list">nhentaidl</span>
+                <span class="data-list">doujinkudl</span>
               </div>
               <div class="data path">
                 <span class="data-title">Path</span>
@@ -198,6 +199,7 @@
                 <span class="data-list">api/download/stickerpack</span>
                 <span class="data-list">api/download/stickerpackdl</span>
                 <span class="data-list">api/h/nhentai</span>
+                <span class="data-list">api/download/doujinkudl</span>
               </div>
               <div class="data Added">
                 <span class="data-title">Method</span>
@@ -214,6 +216,8 @@
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <!-- <span class="data-list">Get</span> -->
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -320,6 +324,12 @@
                     ><i class="uil uil-play"></i> Go to
                   </a></span
                 >
+                <span class="data-list"
+                  ><a
+                    href="api/download/doujinkudl?url=https://doujinku.co/surprise-ntr-chapter-12-end"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
               </div>
               <div class="data status">
                 <span class="data-title">Status</span>
@@ -333,6 +343,7 @@
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <!-- <span class="data-list">Online</span> -->
+                <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
@@ -374,6 +385,8 @@
                 <span class="data-list">Covid</span>
                 <span class="data-list">Komiku</span>
                 <span class="data-list">Doujindesu</span>
+                <span class="data-list">Doujinku</span>
+                <span class="data-list">Doujinkudetail</span>
                 <span class="data-list">Kuyhaa</span>
                 <span class="data-list">Adikfilm</span>
                 <span class="data-list">Character</span>
@@ -403,6 +416,8 @@
                 <span class="data-list">api/information/covid</span>
                 <span class="data-list">api/information/komiku</span>
                 <span class="data-list">api/information/doujindesu</span>
+                <span class="data-list">api/information/doujinkusearch</span>
+                <span class="data-list">api/information/doujinkudetail</span>
                 <span class="data-list">api/information/kuyhaa</span>
                 <span class="data-list">api/information/adikfilm</span>
                 <span class="data-list">api/information/character</span>
@@ -410,6 +425,8 @@
               </div>
               <div class="data Added">
                 <span class="data-title">Method</span>
+                <span class="data-list">Get</span>
+                <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
                 <span class="data-list">Get</span>
@@ -551,6 +568,17 @@
                   </a></span
                 >
                 <span class="data-list"
+                  ><a href="api/information/doujinkusearch=milf"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
+                  ><a
+                    href="api/information/doujinkudetail?url=https://doujinku.co/manga/surprise-nt"
+                    ><i class="uil uil-play"></i> Go to
+                  </a></span
+                >
+                <span class="data-list"
                   ><a href="api/information/kuyhaa?q=jet brains"
                     ><i class="uil uil-play"></i> Go to
                   </a></span
@@ -573,6 +601,8 @@
               </div>
               <div class="data status">
                 <span class="data-title">Status</span>
+                <span class="data-list">Online</span>
+                <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
                 <span class="data-list">Online</span>
